<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>upper</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="107849799+YUKICHI6105@users.noreply.github.com">yukichi6105</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>can_plugins2</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>
  <depend>robomas_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
